tests/errors/assertBadArg.milo
// @error: assert() condition must be bool, got i64

fn main(): i32 {
    assert(42)
    return 0
}
